tests/ui/typeck/typeck_type_placeholder_item.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:161:18
   |
LL | struct BadStruct<_>(_);
   |                  ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:164:16
   |
LL | trait BadTrait<_> {}
   |                ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:176:19
   |
LL | struct BadStruct1<_, _>(_);
   |                   ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:176:22
   |
LL | struct BadStruct1<_, _>(_);
   |                      ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/typeck_type_placeholder_item.rs:181:19
   |
LL | struct BadStruct2<_, T>(_, T);
   |                   ^ expected identifier, found reserved identifier

error: associated constant in `impl` without body
  --> $DIR/typeck_type_placeholder_item.rs:218:5
   |
LL |     const C: _;
   |     ^^^^^^^^^^-
   |               |
   |               help: provide a definition for the constant: `= <expr>;`

error[E0403]: the name `_` is already used for a generic parameter in this item's generic parameters
  --> $DIR/typeck_type_placeholder_item.rs:176:22
   |
LL | struct BadStruct1<_, _>(_);
   |                   -  ^ already used
   |                   |
   |                   first use of `_`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:13:15
   |
LL | static TEST3: _ = "test";
   |               ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TEST3: _ = "test";
LL + static TEST3: &str = "test";
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:16:15
   |
LL | static TEST4: _ = 145;
   |               ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TEST4: _ = 145;
LL + static TEST4: i32 = 145;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:19:16
   |
LL | static TEST5: (_, _) = (1, 2);
   |                ^  ^ not allowed in type signatures
   |                |
   |                not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL - static TEST5: (_, _) = (1, 2);
LL + static TEST5: (i32, i32) = (1, 2);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:22:13
   |
LL | fn test6(_: _) { }
   |             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:25:18
   |
LL | fn test6_b<T>(_: _, _: T) { }
   |                  ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:28:30
   |
LL | fn test6_c<T, K, L, A, B>(_: _, _: (T, K, L, A, B)) { }
   |                              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:31:13
   |
LL | fn test7(x: _) { let _x: usize = x; }
   |             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:34:22
   |
LL | fn test8(_f: fn() -> _) { }
   |                      ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:67:8
   |
LL |     a: _,
   |        ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:69:9
   |
LL |     b: (_, _),
   |         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:69:12
   |
LL |     b: (_, _),
   |            ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:124:12
   |
LL |         a: _,
   |            ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:126:13
   |
LL |         b: (_, _),
   |             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:126:16
   |
LL |         b: (_, _),
   |                ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:161:21
   |
LL | struct BadStruct<_>(_);
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:176:25
   |
LL | struct BadStruct1<_, _>(_);
   |                         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for structs
  --> $DIR/typeck_type_placeholder_item.rs:181:25
   |
LL | struct BadStruct2<_, T>(_, T);
   |                         ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:59:24
   |
LL |     fn clone(&self) -> _ { Test9 }
   |                        ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -     fn clone(&self) -> _ { Test9 }
LL +     fn clone(&self) -> Test9 { Test9 }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:62:37
   |
LL |     fn clone_from(&mut self, other: _) { *self = Test9; }
   |                                     ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -     fn clone_from(&mut self, other: _) { *self = Test9; }
LL +     fn clone_from(&mut self, other: &Test9) { *self = Test9; }
   |

error: missing type for `static` item
  --> $DIR/typeck_type_placeholder_item.rs:75:13
   |
LL |     static A = 42;
   |             ^ help: provide a type for the static variable: `: i32`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:77:15
   |
LL |     static B: _ = 42;
   |               ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static B: _ = 42;
LL +     static B: i32 = 42;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:79:22
   |
LL |     static C: Option<_> = Some(42);
   |                      ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static C: Option<_> = Some(42);
LL +     static C: Option<i32> = Some(42);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:87:22
   |
LL |     static FN_TEST3: _ = "test";
   |                      ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static FN_TEST3: _ = "test";
LL +     static FN_TEST3: &str = "test";
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:90:22
   |
LL |     static FN_TEST4: _ = 145;
   |                      ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static FN_TEST4: _ = 145;
LL +     static FN_TEST4: i32 = 145;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
  --> $DIR/typeck_type_placeholder_item.rs:93:23
   |
LL |     static FN_TEST5: (_, _) = (1, 2);
   |                       ^  ^ not allowed in type signatures
   |                       |
   |                       not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     static FN_TEST5: (_, _) = (1, 2);
LL +     static FN_TEST5: (i32, i32) = (1, 2);
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:96:20
   |
LL |     fn fn_test6(_: _) { }
   |                    ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:99:20
   |
LL |     fn fn_test7(x: _) { let _x: usize = x; }
   |                    ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:102:29
   |
LL |     fn fn_test8(_f: fn() -> _) { }
   |                             ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:116:28
   |
LL |         fn clone(&self) -> _ { FnTest9 }
   |                            ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -         fn clone(&self) -> _ { FnTest9 }
LL +         fn clone(&self) -> FnTest9 { FnTest9 }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:119:41
   |
LL |         fn clone_from(&mut self, other: _) { *self = FnTest9; }
   |                                         ^ not allowed in type signatures
   |
help: try replacing `_` with the type in the corresponding trait method signature
   |
LL -         fn clone_from(&mut self, other: _) { *self = FnTest9; }
LL +         fn clone_from(&mut self, other: &FnTest9) { *self = FnTest9; }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:131:21
   |
LL |     fn fn_test11(_: _) -> (_, _) { panic!() }
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/typeck_type_placeholder_item.rs:139:21
   |
LL |     fn fn_test13(x: _) -> (i32, _) { (x, x) }
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:145:31
   |
LL |     fn method_test1(&self, x: _);
   |                               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:147:31
   |
LL |     fn method_test2(&self, x: _) -> _;
   |                               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:147:37
   |
LL |     fn method_test2(&self, x: _) -> _;
   |                                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:150:31
   |
LL |     fn method_test3(&self) -> _;
   |                               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:152:26
   |
LL |     fn assoc_fn_test1(x: _);
   |                          ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:154:26
   |
LL |     fn assoc_fn_test2(x: _) -> _;
   |                          ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:154:32
   |
LL |     fn assoc_fn_test2(x: _) -> _;
   |                                ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated functions
  --> $DIR/typeck_type_placeholder_item.rs:157:28
   |
LL |     fn assoc_fn_test3() -> _;
   |                            ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for implementations
  --> $DIR/typeck_type_placeholder_item.rs:166:32
   |
LL | impl BadTrait<_> for BadStruct<_> {}
   |                                ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for implementations
  --> $DIR/typeck_type_placeholder_item.rs:166:15
   |
LL | impl BadTrait<_> for BadStruct<_> {}
   |               ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:170:34
   |
LL | fn impl_trait() -> impl BadTrait<_> {
   |                                  ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for type aliases
  --> $DIR/typeck_type_placeholder_item.rs:185:14
   |
LL | type X = Box<_>;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:191:21
   |
LL | type Y = impl Trait<_>;
   |                     ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:201:14
   |
LL |     type B = _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:214:14
   |
LL |     type A = _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:216:14
   |
LL |     type B = _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:203:14
   |
LL |     const C: _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:218:14
   |
LL |     const C: _;
   |              ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:205:14
   |
LL |     const D: _ = 42;
   |              ^ not allowed in type signatures
   |
help: replace this with a fully-specified type
   |
LL -     const D: _ = 42;
LL +     const D: i32 = 42;
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/typeck_type_placeholder_item.rs:221:14
   |
LL |     const D: _ = 42;
   |              ^ not allowed in type signatures

error[E0046]: not all trait items implemented, missing: `F`
  --> $DIR/typeck_type_placeholder_item.rs:212:1
   |
LL |     type F: std::ops::Fn(_);
   |     ----------------------- `F` from trait
...
LL | impl Qux for Struct {
   | ^^^^^^^^^^^^^^^^^^^ missing `F` in implementation

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/typeck_type_placeholder_item.rs:234:17
   |
LL | const _: Option<_> = map(value);
   |                 ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/typeck_type_placeholder_item.rs:242:10
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |          ^ not allowed in type signatures
   |
note: however, the inferred type `Map<Filter<Range<i32>, {closure@typeck_type_placeholder_item.rs:242:29}>, {closure@typeck_type_placeholder_item.rs:242:49}>` cannot be named
  --> $DIR/typeck_type_placeholder_item.rs:242:14
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:43:27
   |
LL |     fn test10(&self, _x : _) { }
   |                           ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for methods
  --> $DIR/typeck_type_placeholder_item.rs:111:34
   |
LL |         fn fn_test10(&self, _x : _) { }
   |                                  ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:208:26
   |
LL |     type F: std::ops::Fn(_);
   |                          ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated types
  --> $DIR/typeck_type_placeholder_item.rs:208:26
   |
LL |     type F: std::ops::Fn(_);
   |                          ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:170:34
   |
LL | fn impl_trait() -> impl BadTrait<_> {
   |                                  ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for opaque types
  --> $DIR/typeck_type_placeholder_item.rs:191:21
   |
LL | type Y = impl Trait<_>;
   |                     ^ not allowed in type signatures
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:7:14
   |
LL | fn test() -> _ { 5 }
   |              ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn test() -> _ { 5 }
LL + fn test() -> i32 { 5 }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:10:16
   |
LL | fn test2() -> (_, _) { (5, 5) }
   |                ^  ^ not allowed in type signatures
   |                |
   |                not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn test2() -> (_, _) { (5, 5) }
LL + fn test2() -> (i32, i32) { (5, 5) }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:40:24
   |
LL |     fn test9(&self) -> _ { () }
   |                        ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL -     fn test9(&self) -> _ { () }
LL +     fn test9(&self) -> () { () }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:47:26
   |
LL | fn test11(x: &usize) -> &_ {
   |                          ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn test11(x: &usize) -> &_ {
LL + fn test11(x: &usize) -> &&usize {
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:53:52
   |
LL | unsafe fn test12(x: *const usize) -> *const *const _ {
   |                                                    ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - unsafe fn test12(x: *const usize) -> *const *const _ {
LL + unsafe fn test12(x: *const usize) -> *const *const usize {
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:81:21
   |
LL |     fn fn_test() -> _ { 5 }
   |                     ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL -     fn fn_test() -> _ { 5 }
LL +     fn fn_test() -> i32 { 5 }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:84:23
   |
LL |     fn fn_test2() -> (_, _) { (5, 5) }
   |                       ^  ^ not allowed in type signatures
   |                       |
   |                       not allowed in type signatures
   |
help: replace with the correct return type
   |
LL -     fn fn_test2() -> (_, _) { (5, 5) }
LL +     fn fn_test2() -> (i32, i32) { (5, 5) }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:108:31
   |
LL |         fn fn_test9(&self) -> _ { () }
   |                               ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL -         fn fn_test9(&self) -> _ { () }
LL +         fn fn_test9(&self) -> () { () }
   |

error[E0282]: type annotations needed
  --> $DIR/typeck_type_placeholder_item.rs:131:21
   |
LL |     fn fn_test11(_: _) -> (_, _) { panic!() }
   |                     ^ cannot infer type

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:131:28
   |
LL |     fn fn_test11(_: _) -> (_, _) { panic!() }
   |                            ^  ^ not allowed in type signatures
   |                            |
   |                            not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:136:30
   |
LL |     fn fn_test12(x: i32) -> (_, _) { (x, x) }
   |                              ^  ^ not allowed in type signatures
   |                              |
   |                              not allowed in type signatures
   |
help: replace with the correct return type
   |
LL -     fn fn_test12(x: i32) -> (_, _) { (x, x) }
LL +     fn fn_test12(x: i32) -> (i32, i32) { (x, x) }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:139:33
   |
LL |     fn fn_test13(x: _) -> (i32, _) { (x, x) }
   |                                 ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL -     fn fn_test13(x: _) -> (i32, _) { (x, x) }
LL +     fn fn_test13(x: _) -> (i32, i32) { (x, x) }
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:229:31
   |
LL | fn value() -> Option<&'static _> {
   |                               ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn value() -> Option<&'static _> {
LL + fn value() -> Option<&u8> {
   |

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/typeck_type_placeholder_item.rs:237:31
   |
LL | fn evens_squared(n: usize) -> _ {
   |                               ^ not allowed in type signatures
   |
help: replace with an appropriate return type
   |
LL - fn evens_squared(n: usize) -> _ {
LL + fn evens_squared(n: usize) -> impl Iterator<Item = usize> {
   |

error[E0015]: cannot call non-const method `<std::ops::Range<i32> as Iterator>::filter::<{closure@$DIR/typeck_type_placeholder_item.rs:242:29: 242:32}>` in constants
  --> $DIR/typeck_type_placeholder_item.rs:242:22
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |                      ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const method `<Filter<std::ops::Range<i32>, {closure@$DIR/typeck_type_placeholder_item.rs:242:29: 242:32}> as Iterator>::map::<i32, {closure@$DIR/typeck_type_placeholder_item.rs:242:49: 242:52}>` in constants
  --> $DIR/typeck_type_placeholder_item.rs:242:45
   |
LL | const _: _ = (1..10).filter(|x| x % 2 == 0).map(|x| x * x);
   |                                             ^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0597]: `x` does not live long enough
  --> $DIR/typeck_type_placeholder_item.rs:49:5
   |
LL | fn test11(x: &usize) -> &_ {
   |              ------     -- has type `&'0 {type error}`
   |              |
   |              has type `&'0 usize`
LL |
LL |     &x
   |     ^^ `x` would have to be valid for `'0`...
LL |
LL | }
   |  -
   |  |
   |  ...but `x` will be dropped here, when the function `test11` returns
   |  borrow later used here
   |
   = note: argument and return type have the same lifetime due to lifetime elision rules
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch10-03-lifetime-syntax.html#lifetime-elision>
   = note: functions cannot return a borrow to data owned within the function's scope, functions can only return borrows to data passed as arguments
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch04-02-references-and-borrowing.html#dangling-references>

error: aborting due to 85 previous errors

Some errors have detailed explanations: E0015, E0046, E0121, E0282, E0403, E0597.
For more information about an error, try `rustc --explain E0015`.
